@@ -304,7 +304,7 @@ my $build = OpenGuides::Build->new(
         'Parse::RecDescent'                   => 0,
         $search_module                        => 0,
         'POSIX'                               => 0,
-        'Template'                            => '2.15', # for hash.delete and string.remove vmethods
+        'Template'                            => '2.24', # for .lower vmethod
         'Time::Piece'                         => 0,
         'URI::Escape'                         => 0,
         'XML::RSS'                            => 0,
