@@ -4,6 +4,8 @@ More detailed changelogs can be found at
 <http://dev.openguides.org/log/trunk>.
 
 0.66    ?
+        Add CSS classes for each category and locale to the "content" div
+          (and hence we now require version 2.24 of Template).
         Switch to using Geo::Coordinates::OSGB/ITM instead of
           Geography::NationalGrid (which no longer exists on CPAN).
         Make sure that whitespace is collapsed in autocreated categories
